# TaskbarPP

./: .gitignore  CMakeLists.txt  PropertyVariant.hpp
TaskbarPP/: CMakeLists.txt  PropVariant.cpp  TaskbarPP.cpp  TaskbarPP.h
